--- a/logstash/templates/logstash-kafka.conf.erb
+++ b/logstash/templates/logstash-kafka.conf.erb
@@ -1,7 +1,7 @@
  input {
     file {
         sincedb_path => "<%= @logstash_install_dir -%>/.sincedb"
-        path => "<%= @logstash_kakfa_log_dir -%>/*.log"
+        path => "<%= @logstash_kafka_log_dir -%>/*.log"
         start_position => "beginning"
         type => "kafka"
         codec => multiline {
