--- a/logstash/templates/logstash-kafka.conf.erb
+++ b/logstash/templates/logstash-kafka.conf.erb
@@ -15,7 +15,7 @@
 
 filter {
       grok {
-           pattern => "[%{TIMESTAMP_ISO8601:logdate}]%{SPACE}[%{LOGLEVEL:level}%{SPACE}]%{GREEDYDATA:message}"
+           pattern => "[%{TIMESTAMP_ISO8601:logdate}]%{SPACE}[%{LOGLEVEL:level}]%{SPACE}%{GREEDYDATA:message}"
       }
 
       # set level INFO by default
