--- a/logstash/templates/logstash-storm-supervisor.conf.erb
+++ b/logstash/templates/logstash-storm-supervisor.conf.erb
@@ -8,7 +8,7 @@
            negate => true
            what => previous
         }
-        start_position => "begining"
+        start_position => "beginning"
         type => "worker"
     }
  }
