Updated Zookeeper for new requirements

--- a/zookeeper/templates/zoo.cfg.erb
+++ b/zookeeper/templates/zoo.cfg.erb
@@ -36,6 +36,8 @@ autopurge.purgeInterval=<%= @zookeeper_autopurge_purgeInterval %>
 
 dataDir=<%= @zookeeper_data_dir %>
 
+dataLogDir=<%= @zookeeper_data_log_dir %>
+
 # the port at which the clients will connect
 clientPort=<%= @zookeeper_clientPort %>
 
