--- a/jmxtrans/templates/kafka_jmxtrans.properties.erb
+++ b/jmxtrans/templates/kafka_jmxtrans.properties.erb
@@ -1,3 +1,3 @@
-KAFKA_JMX_TRANS_PORT=<%= @kafka_jmx_trans_port %>
-GANGLIA_SERVER_HOST=<%= @ganglia_server_host %>
-GANGLIA_SERVER_PORT=<%= @ganglia_server_port %>
+KAFKA_JMX_TRANS_PORT=<%= @jmxtrans_kafka_jmx_trans_port %>
+GANGLIA_SERVER_HOST=<%= @jmxtrans_ganglia_server_host %>
+GANGLIA_SERVER_PORT=<%= @jmxtrans_ganglia_server_port %>
