--- a/hdp/templates/check_status.sh.erb
+++ b/hdp/templates/check_status.sh.erb
@@ -1,14 +1,23 @@
 #!/bin/bash
-while [ 1 ]
-do
-    tasks=`curl -s -u admin:admin -H 'X-Requested-By: ambari' 'http://<%= scope.lookupvar('hdp::params::AMBARISERVER_HOSTNAME') %>:8080/api/v1/clusters/hadoopcluster/requests/1?fields=tasks/Tasks/*'|python /tmp/check_status.py`
-    if [[ $? -eq 0 ]]
-    then
-        exit
-    elif [[ $? -eq <%= scope.lookupvar('hdp::params::COUNT_HOSTNAME') %> ]]
-    then
-        exit 1;
-    else
-        sleep 15
-    fi
-done
+
+file="/tmp/waitforhosttoregister.pid"
+
+if [ -f $file ]; then
+        echo "Already Waited for agent it enough..."
+else
+	while [ 1 ]
+	do
+    		tasks=`curl -s -u admin:admin -H 'X-Requested-By: ambari' 'http://<%= scope.lookupvar('hdp::params::AMBARISERVER_HOSTNAME') %>:8080/api/v1/clusters/hadoopcluster/requests/1?fields=tasks/Tasks/*'|python /tmp/check_status.py`
+    
+    		if [[ $? -eq 0 ]]
+    		then
+      			elif [[ $? -eq <%= scope.lookupvar('hdp::params::COUNT_HOSTNAME') %> ]]
+      			then
+        	   		/bin/touch /tmp/waitforhosttoregister.pid
+        	   	exit 1;
+    		else
+        	   sleep 15
+    		fi
+	done
+        /bin/touch /tmp/waitforhosttoregister.pid	
+fi
