--- a/hdp/templates/mysqlbackup.sh.erb
+++ b/hdp/templates/mysqlbackup.sh.erb
@@ -7,5 +7,5 @@
 PASS='<%= scope.lookupvar('hdp::params::PASSWORD') %>'
 DIR= <%= scope.lookupvar('hdp::params::BACKUP_DIR') %>
 
-mysqldump -u hive -p${PASSWORD} --opt --flush-logs --single-transaction hive -h `hostname -f` > ${DIR}/${PREFIX}${hive}_`date +%Y%m%d-%H%M%S`.sql
-mysqldump -u oozie -p${PASSWORD} --opt --flush-logs --single-transaction oozie -h `hostname -f` > ${DIR}/${PREFIX}${oozie}_`date +%Y%m%d-%H%M%S`.sql
+mysqldump -u hive -p${PASSWORD} --opt --flush-logs --single-transaction hive -h `hostname -f` > ${DIR}/hive_`date +%Y%m%d-%H%M%S`.sql
+mysqldump -u oozie -p${PASSWORD} --opt --flush-logs --single-transaction oozie -h `hostname -f` > ${DIR}/oozie_`date +%Y%m%d-%H%M%S`.sql
