--- a/bpaas/logstash/templates/logstash-bdse.upstart.erb
+++ b/bpaas/logstash/templates/logstash-bdse.upstart.erb
@@ -11,7 +11,8 @@ chdir <%= @logstash_install_dir -%>
 script
 
   # This runs logstash agent as the 'logstash' user
-  /usr/bin/java -Xmx<%= @logstash_heap -%> -jar <%= @logstash_install_dir -%>/logstash-<%= @logstash_version -%>-flatjar.jar agent -f <%= @logstash_install_dir -%>/bdse.conf --log <%= @logstash_log_dir -%>/logstash-bdse.log &
+  #/usr/bin/java -Xmx<%= @logstash_heap -%> -jar <%= @logstash_install_dir -%>/logstash-<%= @logstash_version -%>-flatjar.jar agent -f <%= @logstash_install_dir -%>/bdse.conf --log <%= @logstash_log_dir -%>/logstash-bdse.log &
+  /opt/logstash/bin/logstash -f <%= @logstash_install_dir -%>/conf/bdse.conf &
   emit logstash-agent-running
 end script
 
