--- a/bpaas/logstash/templates/logstash-hadoop.upstart.erb
+++ b/bpaas/logstash/templates/logstash-hadoop.upstart.erb
@@ -12,7 +12,7 @@ script
 
   # This runs logstash agent as the 'logstash' user
   #/usr/bin/java -Xmx<%= @logstash_heap -%> -jar <%= @logstash_install_dir -%>/logstash-<%= @logstash_version -%>-flatjar.jar agent -f <%= @logstash_install_dir -%>/hadoop.conf --log <%= @logstash_log_dir -%>/logstash-hadoop.log &
-  /opt/logstash/bin/logstash -f <%= @logstash_install_dir -%>/conf/hadoop.conf
+  /opt/logstash/bin/logstash -f <%= @logstash_install_dir -%>/conf/hadoop.conf &
   emit logstash-agent-running
 end script
 
