--- a/bpaas/logstash/templates/logstash-bdse.conf.erb
+++ b/bpaas/logstash/templates/logstash-bdse.conf.erb
@@ -66,7 +66,7 @@ filter {
 
 }
 output {
-  stdout { codec => "rubydebug" }
+#  stdout { codec => "rubydebug" }
   kafka {
 	   broker_list => "<%= @lmm_broker_list -%>"
            topic_id => "logTopic"
